--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,11 @@ body {
     background-color: #F9FAFC;
 }
 
+.container-fluid,
+.blue-bg {
+    background-color: #013b94
+}
+
 .brand {
     font-family: Lato, sans-serif;
     font-size: 1.4rem;
@@ -139,4 +144,58 @@ body {
     color: #E84610;
     background: transparent;
     border: none;
+}
+
+/* Hero content */
+
+.hero-wrap {
+    position: relative;
+}
+
+.hero-wrap .hero-mask {
+    z-index: 1;
+}
+
+.opacity-3 {
+    opacity: 0.3;
+}
+
+
+.travellers-dropdown {
+    display: none;
+}
+
+.icon-inside {
+    position: absolute;
+    right: 15px;
+    top: calc(50% - 11px);
+    pointer-events: none;
+    font-size: 18px;
+    font-size: 1.125rem;
+    color: #c4c3c3;
+    z-index: 3;
+}
+
+btn-primary {
+    background-color: #006ce4;
+    border-color: #006ce4;
+}
+
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    text-align: center;
 }
