--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,9 @@
 
     <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">c<span class="red-o">o</span>de<span
-                        class="thin">|star</span></span></span></a>
+            <a class="navbar-brand text-white" href="{% url 'home' %}">Booking Hotel</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -57,20 +56,161 @@
     </nav>
 
     <main class="flex-shrink-0 main-bg">
+        <div id="content">
+        <div class="hero-wrap">
+            <div class="hero-mask opacity-3 bg-dark"></div>
+            <div class="hero-bg" style="background-image: url('./images/bg/image-2.jpg')"></div>
+            <div class="hero-content d-flex fullscreen-with-header">
+                <div class="container my-auto py-5">
+                    <div class="tab-content bg-white shadow-md rounded-bottom p-4" id="myTabContent">
+                        <div class="tab-pane fade show active" id="hotels" role="tabpanel" aria-labelledby="hotels-tab">
+                            <h2 class="text-4 mb-3">Find your next stay</h2>
+                            <form id="bookingHotels" method="post">
+                                <div class="row g-3 g-lg-2">
+                                    <div class="col-md-12 col-lg">
+                                        <div class="position-relative">
+                                            <input type="text" class="form-control" id="hotelsFrom" required
+                                                placeholder="Enter City" />
+                                            <span class="icon-inside"><i class="fas fa-map-marker-alt"></i></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg">
+                                        <div class="position-relative">
+                                            <input id="hotelsCheckIn" type="text" class="form-control" required
+                                                placeholder="Check In" />
+                                            <span class="icon-inside"><i class="far fa-calendar-alt"></i></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg">
+                                        <div class="position-relative">
+                                            <input id="hotelsCheckOut" type="text" class="form-control" required
+                                                placeholder="Check Out" />
+                                            <span class="icon-inside"><i class="far fa-calendar-alt"></i></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg">
+                                        <div class="travellers-class">
+                                            <input type="text" id="hotelsTravellersClass"
+                                                class="travellers-class-input form-control" name="hotels-travellers-class"
+                                                placeholder="Rooms / People" required onkeypress="return false;" />
+                                            <span class="icon-inside"><i class="fas fa-caret-down"></i></span>
+                                            <div class="travellers-dropdown">
+                                                <div class="row align-items-center">
+                                                    <div class="col-sm-7">
+                                                        <p class="mb-sm-0">Rooms</p>
+                                                    </div>
+                                                    <div class="col-sm-5">
+                                                        <div class="qty input-group">
+                                                            <div class="input-group-prepend">
+                                                                <button type="button" class="btn bg-light-4"
+                                                                    data-value="decrease" data-target="#hotels-rooms"
+                                                                    data-toggle="spinner">
+                                                                    -
+                                                                </button>
+                                                            </div>
+                                                            <input type="text" data-ride="spinner" id="hotels-rooms"
+                                                                class="qty-spinner form-control" value="1" readonly />
+                                                            <div class="input-group-append">
+                                                                <button type="button" class="btn bg-light-4"
+                                                                    data-value="increase" data-target="#hotels-rooms"
+                                                                    data-toggle="spinner">
+                                                                    +
+                                                                </button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <hr class="mt-2 mb-4" />
+                                                <div class="row align-items-center">
+                                                    <div class="col-sm-7">
+                                                        <p class="mb-sm-0">
+                                                            Adults <small class="text-muted">(12+ yrs)</small>
+                                                        </p>
+                                                    </div>
+                                                    <div class="col-sm-5">
+                                                        <div class="qty input-group">
+                                                            <div class="input-group-prepend">
+                                                                <button type="button" class="btn bg-light-4"
+                                                                    data-value="decrease" data-target="#adult-travellers"
+                                                                    data-toggle="spinner">
+                                                                    -
+                                                                </button>
+                                                            </div>
+                                                            <input type="text" data-ride="spinner" id="adult-travellers"
+                                                                class="qty-spinner form-control" value="1" readonly />
+                                                            <div class="input-group-append">
+                                                                <button type="button" class="btn bg-light-4"
+                                                                    data-value="increase" data-target="#adult-travellers"
+                                                                    data-toggle="spinner">
+                                                                    +
+                                                                </button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <hr class="my-2" />
+                                                <div class="row align-items-center">
+                                                    <div class="col-sm-7">
+                                                        <p class="mb-sm-0">
+                                                            Children
+                                                            <small class="text-muted">(1-12 yrs)</small>
+                                                        </p>
+                                                    </div>
+                                                    <div class="col-sm-5">
+                                                        <div class="qty input-group">
+                                                            <div class="input-group-prepend">
+                                                                <button type="button" class="btn bg-light-4"
+                                                                    data-value="decrease" data-target="#children-travellers"
+                                                                    data-toggle="spinner">
+                                                                    -
+                                                                </button>
+                                                            </div>
+                                                            <input type="text" data-ride="spinner" id="children-travellers"
+                                                                class="qty-spinner form-control" value="0" readonly />
+                                                            <div class="input-group-append">
+                                                                <button type="button" class="btn bg-light-4"
+                                                                    data-value="increase" data-target="#children-travellers"
+                                                                    data-toggle="spinner">
+                                                                    +
+                                                                </button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="d-grid">
+                                                    <button class="btn btn-primary submit-done mt-3" type="button">
+                                                        Done
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg d-grid">
+                                        <button class="btn btn-primary" type="submit">Search</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">Made by Code Instituters</p>
+    <footer class="footer mt-auto py-3 blue-bg">
+        <p class="m-0 text-center text-white"></p>
         <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
             <i class="fab fa-instagram-square ms-3"></i>
             <i class="fab fa-youtube-square ms-3"></i>
         </p>
     </footer>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
