Add display rooms on index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
     <main class="flex-shrink-0 main-bg">
         <div id="content">
             <div class="hero-wrap">
-                <div class="hero-bg" style="background-image: url('{% static 'images/hero-bg.webp' %}')"></div>
+                <div class="hero-bg dark-overlay" style="background-image: url('{% static 'images/hero-bg.webp' %}')"></div>
                 <div class="tab-pane  bg-white fade show active rounded-bottom p-4" id="hotels" role="tabpanel" aria-labelledby="hotels-tab">
                     <h2 class="text-4 mb-3">Find your next stay</h2>
                     <div class="row g-3 g-lg-2">
