--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,7 +41,9 @@ body {
 
 .image-container {
     position: relative;
+    border-radius: 20px;
 }
+
 
 .image-flash {
     position: absolute;
@@ -49,6 +51,14 @@ body {
     min-width: 30%;
     left: -2px;
     background-color: #23BBBB;
+}
+
+.image-flash-top-right {
+    position: absolute;
+    top: 5%;
+    min-width: 30%;
+    right: -2px;
+    /* background-color: blue; */
 }
 
 .author {
@@ -148,7 +158,19 @@ body {
 
 /* Hero content */
 
+.hero-bg {
+    position: relative;
+}
 
+.hero-bg::before {
+    content: "";
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 .icon-inside {
     position: absolute;
@@ -165,6 +187,7 @@ body {
     position: relative;
     z-index: 1;
 }
+
 .hero-bg {
     position: absolute;
     top: 0;
