--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,43 @@
-{% extends "base.html" %} 
 
+{% extends "base.html" %} 
+{% load static %}
 
 {% block content %}
-
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="{% static 'images/hero-bg.webp' %}" class="d-block w-100 responsive-img" alt="...">
+            <div class="carousel-caption d-none d-md-block custom-caption">
+                <h1>First slide label</h1>
+                <h4>Some representative placeholder content for the first slide.</h4>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'images/cork.webp' %}" class="d-block w-100 responsive-img" alt="...">
+            <div class="carousel-caption d-none d-md-block custom-caption">
+                <h1>Second slide label</h1>
+                <h4>Some representative placeholder content for the second slide.</h4>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'images/limerick.webp' %}" class="d-block w-100 responsive-img" alt="...">
+            <div class="carousel-caption d-none d-md-block custom-caption">
+                <h1>Third slide label</h1>
+                <h4>Some representative placeholder content for the third slide.</h4>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
 <section class="section bg-white">
     <div class="container text-center">
         <h2 class="text-9 fw-500">Offers</h2>
@@ -30,9 +65,8 @@
                                     </div>
                                 </div>
                                 <a href="{% url 'room_detail' room.slug  %}" class="post-link">
-                                    <h2 class="card-title">{{ room.hotel }}</h2>
-                                    <h4 class="card-title">{{ room.room_name }}</h4>
-                                    <!-- <p class="card-text">{{ room.description_room }}</p> -->
+                                    <h4 class="card-title">{{ room.hotel }}</h4>
+                                    <h6 class="card-title">{{ room.room_name }}</h6>
                                 </a>
                                 <hr/>
                             </div>
