--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,28 +44,34 @@ body {
     border-radius: 20px;
 }
 
-#carouselExampleAutoplaying {
-    max-height: 80vh;
-    overflow: hidden;
+/* Carousel */
 
-}
+ .carousel-item {
+     position: relative;
+ }
 
-.carousel-item {
+ .carousel-item::before {
+     content: "";
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     background: rgba(0, 0, 0, 0.5);
+     z-index: 1;
+ }
 
-    align-items: center;
-    overflow: hidden;
-}
+ .carousel-item h1,  .carousel-item h4 {
+     position: relative;
+     z-index: 2;
+     color: white;
+ }
 
-.carousel-item img {
-    width: 100%;
-    height: auto;
-}
-
-.carousel-caption {
-    background: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    padding: 15px;
-}
+ .carousel-item img {
+     height: 600px;
+     width: 100%;
+     object-fit: cover;
+ }
 
 
 .image-flash {
@@ -81,6 +87,14 @@ body {
     top: 5%;
     min-width: 30%;
     right: -2px;
+}
+
+.image-flash-top-left {
+    position: absolute;
+    top: 5%;
+    min-width: 30%;
+    left: -2px;
+    background-color: #0071cc;
 }
 
 .author {
@@ -130,7 +144,7 @@ body {
 
 .post-link:hover,
 .page-link {
-    color: #E84610;
+    color: #310add;
 }
 
 .post-title {
@@ -180,7 +194,7 @@ body {
 
 /* Hero content */
 
-.hero-bg {
+/* .hero-bg {
     position: relative;
 }
 
@@ -275,4 +289,4 @@ body {
     padding: 0.75rem 2.5rem;
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
-}
+} */
