--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav  ms-auto" >
             <li class="nav-item">
               <a
                 class="nav-link active text-white"
@@ -64,14 +64,14 @@
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Logout</a>
+              <a class="nav-link text-white" href="{% url 'account_logout' %}">Logout</a>
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Register</a>
+              <a class="nav-link text-white" href="{% url 'account_signup' %}">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Login</a>
+              <a class="nav-link text-white" href="{% url 'account_login' %}">Login</a>
             </li>
             {% endif %}
           </ul>
