--- a/templates/index.html
+++ b/templates/index.html
@@ -8,22 +8,22 @@
         <div class="carousel-item active">
             <img src="{% static 'images/hero-bg.webp' %}" class="d-block w-100 responsive-img" alt="...">
             <div class="carousel-caption d-none d-md-block custom-caption">
-                <h1>First slide label</h1>
-                <h4>Some representative placeholder content for the first slide.</h4>
+                <h1>Dublin - the capital of history and fun</h1>
+                <h4>Discover a rich cultural heritage and lively music.</h4>
             </div>
         </div>
         <div class="carousel-item">
             <img src="{% static 'images/cork.webp' %}" class="d-block w-100 responsive-img" alt="...">
             <div class="carousel-caption d-none d-md-block custom-caption">
-                <h1>Second slide label</h1>
-                <h4>Some representative placeholder content for the second slide.</h4>
+                <h1>Cork - the city of art and delicious food</h1>
+                <h4>Immerse yourself in cultural diversity and culinary delights.</h4>
             </div>
         </div>
         <div class="carousel-item">
             <img src="{% static 'images/limerick.webp' %}" class="d-block w-100 responsive-img" alt="...">
             <div class="carousel-caption d-none d-md-block custom-caption">
-                <h1>Third slide label</h1>
-                <h4>Some representative placeholder content for the third slide.</h4>
+                <h1>Limerick - where history and modernity blend</h1>
+                <h4>Explore ancient landmarks and contemporary art.</h4>
             </div>
         </div>
     </div>
@@ -62,6 +62,9 @@
                                     </div>
                                     <div class="image-flash-top-right">
                                         <p class="Likes"><i class="far fa-heart"></i>{{ Room.likes}}</p>
+                                    </div>
+                                    <div class="image-flash-top-left">
+                                        <p class="City">{{ City.city_name}}</p>
                                     </div>
                                 </div>
                                 <a href="{% url 'room_detail' room.slug  %}" class="post-link">
