--- a/templates/base.html
+++ b/templates/base.html
@@ -25,14 +25,14 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
-
   <body class="d-flex flex-column h-100 main-bg">
     <!-- Navigation -->
 
@@ -53,7 +53,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav  ms-auto" >
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a
                 class="nav-link active text-white"
@@ -64,14 +64,20 @@
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link text-white" href="{% url 'account_logout' %}">Logout</a>
+              <a class="nav-link text-white" href="{% url 'account_logout' %}"
+                >Logout</a
+              >
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link text-white" href="{% url 'account_signup' %}">Register</a>
+              <a class="nav-link text-white" href="{% url 'account_signup' %}"
+                >Register</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="{% url 'account_login' %}">Login</a>
+              <a class="nav-link text-white" href="{% url 'account_login' %}"
+                >Login</a
+              >
             </li>
             {% endif %}
           </ul>
@@ -81,11 +87,9 @@
     </nav>
 
     <main class="flex-shrink-0 main-bg">
-        
       {% block content %}
       <!-- Content Goes here -->
       {% endblock content %}
-    
     </main>
 
     <!-- Footer -->
