--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -4,13 +4,9 @@
   <div class="container">
     <div class="row g-0">
       <div class="col-md-6 masthead-text">
-        <!-- Post title goes in these h1 tags -->
         <h1 class="post-title">{{ room.room_name }}</h1>
-        <!-- Post author goes before the | the post's created date goes after -->
-        <!-- <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p> -->
       </div>
       <div class="d-none d-md-block col-md-6 masthead-image">
-        <!-- The featured image URL goes in the src attribute -->
         {% if "placeholder" in room.room_image.url %}
         <img
           src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
@@ -23,17 +19,13 @@
     </div>
   </div>
 </div>
-
 <div class="container">
   <div class="row">
     <div class="col card mb-4 mt-3 left top">
       <div class="card-body">
-        <!-- The post content goes inside the card-text. -->
-        <!-- Use the | safe filter inside the template tags -->
         <p class="card-text">{{ room.description_room | safe }}</p>
         <div class="row">
           <div class="col-1">
-            <!-- The number of likes goes before the closing strong tag -->
             <strong class="text-secondary"
               ><i class="far fa-heart"></i> {{ room.number_of_likes }}
             </strong>
@@ -42,12 +34,15 @@
             {% with Guest_reviews.count as total_reviews %}
             <strong class="text-secondary"
               ><i class="far fa-comments"></i>
-              <!-- Our total_comments variable goes before the closing strong tag -->
-              {{ total_reviews }}</strong
-            >
+              {{ total_reviews }}
+            </strong>
+
             {% endwith %}
           </div>
         </div>
+        <a href="{% url 'book_room' room.slug %}" class="btn btn-primary"
+          >Booking now</a
+        >
       </div>
     </div>
   </div>
@@ -60,7 +55,6 @@
     <div class="col-md-8 card mb-4 mt-3">
       <h3>Reviews:</h3>
       <div class="card-body">
-        <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
         {% for review in reviews %}
         <div class="comments" style="padding: 10px">
           <p class="font-weight-bold">
@@ -76,7 +70,6 @@
     </div>
     <div class="col-md-4 card mb-4 mt-3">
       <div class="card-body">
-        <!-- For later -->
         {% if commented %}
         <div class="alert alert-success" role="alert">
           Your review is awaiting approval
