--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
 
     <main class="flex-shrink-0 main-bg">
       {% block content %}
-      <!-- Content Goes here -->
+      <!-- Content  -->
       {% endblock content %}
     </main>
 
