--- a/templates/index.html
+++ b/templates/index.html
@@ -47,13 +47,13 @@
                 <div class="row">
                 {% for room in room_list%}
                     <div class="col-md-4">
-                        <div class="card mb-4">
-                            <div class="card-body">
+                        <div class="card mb-4 h-100">
+                            <div class="card-body d-flex flex-column shadow">
                                 <div class="image-container">
                                     {% if room.room_image %}
-                                    <img class="card-img-top" src="{{ room.room_image.url }}" alt="image room">
+                                    <img class="card-img-top img-fluid" src="{{ room.room_image.url }}" alt="image room">
                                     {% else %}
-                                    <img class="card-img-top"
+                                    <img class="card-img-top img-fluid"
                                         src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
                                         alt="image planet">
                                     {% endif %}
@@ -67,11 +67,10 @@
                                         <p class="City">{{ City.city_name}}</p>
                                     </div>
                                 </div>
-                                <a href="{% url 'room_detail' room.slug  %}" class="post-link">
-                                    <h4 class="card-title">{{ room.hotel }}</h4>
-                                    <h6 class="card-title">{{ room.room_name }}</h6>
+                                <a href="{% url 'room_detail' room.slug %}" class="post-link">
+                                    <h4 class="card-title text-center">{{ room.hotel }}</h4>
+                                    <h6 class="card-title text-center">{{ room.room_name }}</h6>
                                 </a>
-                                <hr/>
                             </div>
                         </div>
                     </div>
