--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
   <body class="d-flex flex-column h-100 main-bg">
     <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg bg-white shadow">
+    <nav class="navbar navbar-expand-lg shadow">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="{% url 'home' %}"
           >Booking Hotel</a
