--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,7 +56,30 @@ body {
 
 .navbar {
     padding: 0;
+    height: 80px;
 }
+
+.navbar-brand {
+    font-size: 24px;
+}
+
+.navbar-nav {
+    align-items: center;
+}
+
+.nav-link {
+    font-size: 18px;
+}
+
+
+
+/* Burger menu */
+
+/* .navbar-toggler-icon {
+    background-color: white;
+
+} */
+
 
 /* Carousel */
 
@@ -83,7 +106,7 @@ body {
 }
 
 .carousel-item img {
-    height: 600px;
+    height: 400px;
     width: 100%;
     object-fit: cover;
 }
