--- a/templates/index.html
+++ b/templates/index.html
@@ -48,10 +48,10 @@
                 {% for room in room_list%}
                     <div class="col-md-4">
                         <div class="card mb-4 h-100">
-                            <div class="card-body d-flex flex-column shadow">
-                                <div class="image-container">
+                            <div class="card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
+                                <div class="image-container ">
                                     {% if room.room_image %}
-                                    <img class="card-img-top img-fluid" src="{{ room.room_image.url }}" alt="image room">
+                                    <img class="card-img-top img-fluid rounded-4" src="{{ room.room_image.url }}" alt="image room">
                                     {% else %}
                                     <img class="card-img-top img-fluid"
                                         src="https://services.meteored.com/img/article/como-podemos-distinguir-los-planetas-de-las-estrellas-1679732078853_1024.jpeg"
