Add style to account pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -218,3 +218,10 @@ body {
   background: transparent;
   border: none;
 }
+
+.blue-button {
+    background-color: blue;
+    color: white;
+    /* Цвет текста */
+}
+
