--- a/templates/booking.html
+++ b/templates/booking.html
@@ -1,9 +1,13 @@
-{% extends 'base.html' %} {% block content %}
-<div class="container">
-  <h1>Booking Room: {{ room.room_name }}</h1>
-  <form method="post">
-    {% csrf_token %} {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Book Now</button>
-  </form>
-</div>
+{% extends 'base.html' %}
+
+{% block content %}
+  <div class="container">
+    <h1 style="font-size: 24px; margin-bottom: 20px;">Booking Room: {{ room.room_name }}</h1>
+
+    <form method="post" style="max-width: 400px; margin: 0 auto;">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-primary" style="display: block; margin-top: 10px;">Book Now</button>
+    </form>
+  </div>
 {% endblock %}
