--- a/templates/index.html
+++ b/templates/index.html
@@ -3,41 +3,43 @@
 {% load static %}
 
 {% block content %}
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="{% static 'images/hero-bg.webp' %}" class="d-block w-100 responsive-img" alt="...">
-            <div class="carousel-caption d-none d-md-block custom-caption">
-                <h1>Dublin - the capital of history and fun</h1>
-                <h4>Discover a rich cultural heritage and lively music.</h4>
+<section class="container mt-2 mb-2  bg-white">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner rounded-4">
+            <div class="carousel-item active">
+                <img src="{% static 'images/hero-bg.webp' %}" class="d-block w-100 responsive-img" alt="...">
+                <div class="carousel-caption d-none d-md-block custom-caption">
+                    <h1>Dublin - the capital of history and fun</h1>
+                    <h4>Discover a rich cultural heritage and lively music.</h4>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'images/cork.webp' %}" class="d-block w-100 responsive-img" alt="...">
+                <div class="carousel-caption d-none d-md-block custom-caption">
+                    <h1>Cork - the city of art and delicious food</h1>
+                    <h4>Immerse yourself in cultural diversity and culinary delights.</h4>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'images/limerick.webp' %}" class="d-block w-100 responsive-img" alt="...">
+                <div class="carousel-caption d-none d-md-block custom-caption">
+                    <h1>Limerick - where history and modernity blend</h1>
+                    <h4>Explore ancient landmarks and contemporary art.</h4>
+                </div>
             </div>
         </div>
-        <div class="carousel-item">
-            <img src="{% static 'images/cork.webp' %}" class="d-block w-100 responsive-img" alt="...">
-            <div class="carousel-caption d-none d-md-block custom-caption">
-                <h1>Cork - the city of art and delicious food</h1>
-                <h4>Immerse yourself in cultural diversity and culinary delights.</h4>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="{% static 'images/limerick.webp' %}" class="d-block w-100 responsive-img" alt="...">
-            <div class="carousel-caption d-none d-md-block custom-caption">
-                <h1>Limerick - where history and modernity blend</h1>
-                <h4>Explore ancient landmarks and contemporary art.</h4>
-            </div>
-        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
+</section>
 <section class="section bg-white">
     <div class="container text-center">
         <h2 class="text-9 fw-500">Offers</h2>
@@ -79,7 +81,6 @@
                 <div class="row">
                     {% endif %}
                     {% endfor %}
-
             </div>
         </div>
     </div>
@@ -88,9 +89,6 @@
     <div class="container text-center">
         <h2 class="text-9 fw-500">Quick and easy trip planner</h2>
         <p class="lead">Pick a vibe and explore the top destinations in Ireland</p>
-
-
-
 </section>
     
 {%endblock%}
