Update success page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -223,6 +223,9 @@ body {
 .blue-button {
     background-color: blue;
     color: white;
-    /* Цвет текста */
 }
 
+.button-container {
+    display: flex;
+    justify-content: space-between;
+}
