--- a/templates/edit_booking.html
+++ b/templates/edit_booking.html
@@ -4,12 +4,17 @@
     <div class="container mt-3 mb-4">
         <h2 class="text-9 text-center fw-500">Edit Booking</h2>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="card shadow mb-4 rounded-4">
                     <div class="card-body">
                         <form method="post" action="{% url 'edit_booking' booking.id %}">
                             {% csrf_token %}
-                            {{ form.as_p }} {# Отображение формы с полями #}
+                            <p>City: {{ booking.room.hotel.city.city_name }}</p>
+                            <p>Hotel: {{ booking.room.hotel.hotel_name }}</p>
+                            <p>Room: {{ booking.room.room_name }}</p>
+                            {{ form.checking_date | date:"d.m.Y" }}
+                            {{ form.checkout_date | date:"d.m.Y" }}
+                            {{ form.as_p }}
                             <button type="submit" class="btn btn-primary">Save Changes</button>
                         </form>
                     </div>
