--- a/templates/booking.html
+++ b/templates/booking.html
@@ -1,12 +1,86 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="container">
-    <h1 style="font-size: 24px; margin-bottom: 20px;" class="text-center">Booking Room: {{ room.room_name }}</h1>
-    <form method="post" style="max-width: 400px; margin: 0 auto;">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit" class="btn btn-primary" style="display: block; margin-top: 10px;">Book Now</button>
-    </form>
-  </div>
+
+
+<section>
+    <div class="container">
+        <div class="py-5 text-center">
+            <h1 style="font-size: 24px; margin-bottom: 5px;" class="text-center">Booking Room</h1>
+            <p class="lead">For a successful room reservation, please provide the following information:</p>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 order-md-2 mb-4">
+            <h5>Photo:</h5>
+            <h5>City:</h5>
+            <h5>Hotek:</h5>
+            <h5 style="font-size: 24px; margin-bottom: 20px;">Booking Room: {{ room.room_name }}</h5>
+            </div>
+            <div class="col-md-8 order-md-1">
+                <form method="post" class="needs-validation" novalidate="">
+                    {% csrf_token %}
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            {{ form.first_name.label_tag }}
+                            {{ form.first_name }}
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            {{ form.last_name.label_tag }}
+                            {{ form.last_name }}
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            {{ form.checking_date.label_tag }}
+                            {{ form.checking_date }}
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            {{ form.checkout_date.label_tag }}
+                            {{ form.checkout_date }}
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            {{ form.phone_number.label_tag }}
+                            {{ form.phone_number }}
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            {{ form.email.label_tag }}
+                            {{ form.email }}
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-4 mb-3">
+                            {{ form.people_count.label_tag }}
+                            {{ form.people_count }}
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            {{ form.children_count.label_tag }}
+                            {{ form.children_count }}
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            {{ form.children_ages.label_tag }}
+                            {{ form.children_ages }}
+                        </div>
+                    </div>
+
+                    <p class="mb-3">Do you need a baby crib in the room? (It's complimentary)</p>
+                    <div class="d-block my-3">
+                        {{ form.child_bed }}
+                    </div>
+                    <p class="mb-3">Do you need the services of a playroom for children? (It's complimentary)</p>                
+                    <div class="d-block my-3">
+                        {{ form.playroom_services }}
+                    </div>
+                    <hr class="mb-4">
+                    <button type="submit" class="btn btn-primary " style="display: block; margin-top: 10px; margin-bottom: 10px">Book Now</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
