--- a/templates/edit_booking.html
+++ b/templates/edit_booking.html
@@ -4,7 +4,7 @@
     <div class="container mt-3 mb-4">
         <h2 class="text-9 text-center fw-500">Edit Booking</h2>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mx-auto" >
                 <div class="card shadow mb-4 rounded-4">
                     <div class="card-body">
                         <form method="post" action="{% url 'edit_booking' booking.id %}">
