--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,10 @@
     </div>
 </section>
 
+<!-- ------------------------------------------ -->
 
+
+<!-- ------------------------------------------ -->
 <section class="section bg-white">
     <div class="container text-center mt-5">
         <h2 class="text-9 fw-500">Special Offers: Promotions, Discounts, and Exclusive Deals Await You</h2>
@@ -98,8 +101,8 @@
                 <div class="row">
                 {% for room in rooms%}
                     <div class="col-md-4">
-                        <div class="card mb-4 h-100">
-                            <div class="card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
+                        <div class="mb-4 h-100">
+                            <div class="card card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
                                 <div class="image-container ">
                                     {% if room.room_image %}
                                     <img class="card-img-top img-fluid rounded-4" src="{{ room.room_image.url }}" alt="image room">
@@ -141,8 +144,8 @@
         <div class="row">
             {% for hotel in hotels %}
             <div class="col-md-4">
-                <div class="card mb-4 h-100">
-                    <div class="card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
+                <div class="mb-4 h-100">
+                    <div class="card card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
                         <div class="image-container">
                             {% if hotel.hotel_image %}
                             <img class="card-img-top img-fluid rounded-4" src="{{ hotel.hotel_image.url }}"
