--- a/templates/my_booking.html
+++ b/templates/my_booking.html
@@ -8,7 +8,9 @@
                 <div class="card shadow mb-4 rounded-4">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="{{ booking.room.room_image.url }}" class="img-fluid rounded-start rounded-4" />
+                            <div class="d-flex m-1" style="height: 100%;">
+                                <img src="{{ booking.room.room_image.url }}" class="img-fluid rounded-4" style="height: 75%; width: 100%; object-fit: cover;">
+                            </div>
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
